# iov-vehicle-tbox-prov

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.cross  README.md  conanfile.txt  toolchain-aarch64-linux-gnu.cmake
config/: prov.yaml  prov_config.yaml  prov_test.conf  prov_test.conf.example
docs/: api.md  build-and-verify.md  deployment.md  diagnostic.md  implementation-summary.md  integration-test.md
include/: constants.h  data_models.h  ecu_uid.h  error_codes.h  framework_store.h  ipc_protocol.h  ipc_server.h  protected_storage.h  protected_storage_impl.h  prov_client.h  prov_service.h  vin_validator.h
scripts/: build.sh  test.sh  verify_error_codes.sh
src/: data_models.cpp  ecu_uid.cpp  error_codes.cpp  framework_store.cpp  ipc_protocol.cpp  ipc_server.cpp  main.cpp  protected_storage.cpp  prov_cli.cpp  prov_client.cpp  prov_service.cpp  vin_validator.cpp
tests/: test_data_models.cpp  test_ecu_uid.cpp  test_ipc.cpp  test_protected_storage.cpp  test_prov_service.cpp  test_vin_validator.cpp
